Fixed some button alignments

--- a/src/Components/ArrowBtn/ArrowBtn.scss
+++ b/src/Components/ArrowBtn/ArrowBtn.scss
@@ -54,7 +54,7 @@ $accent-color: #ffac12;
 
   .centered-paragraph__button {
     font-size: 20px;
-    margin-left: 40px;
+    margin-left: 120px;
   }
 }
 
