--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -42,7 +42,7 @@
     margin-left: 100px;
   }
   .footer__button {
-    margin: 40px 0 -50px 60px;
+    margin: 40px 0 -50px 1px;
   }
   .footer-line {
     margin-left: 50px;
